[gd_scene load_steps=76 format=2]

[ext_resource path="res://Secondarie/Sprites/Personaggi/Player.png" type="Texture" id=1]
[ext_resource path="res://Personaggio/PlayerSogno.gd" type="Script" id=2]
[ext_resource path="res://Statistiche/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Statistiche/SwordHitbox.gd" type="Script" id=4]
[ext_resource path="res://Statistiche/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Statistiche/Stats.tscn" type="PackedScene" id=6]
[ext_resource path="res://Vitamine/VitaminaAStatsIst.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape2D" id=104]
radius = 11.0
height = 6.0

[sub_resource type="Animation" id=132]
resource_name = "AttackDown"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 39, 40, 42 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -91.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=133]
resource_name = "AttackUp"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 130, 132, 134 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 89.2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=105]
resource_name = "Attack_left"
length = 0.8
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 233, 231, 229 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -5.5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=106]
resource_name = "Attack_right"
length = 0.8
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 52, 54, 56 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 183.9 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=217]
resource_name = "Death"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 272, 271, 270, 269, 268, 267, 266 ]
}

[sub_resource type="Animation" id=107]
resource_name = "Idle_down"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=108]
resource_name = "Idle_left"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 181, 180, 179, 178, 177, 176, 175, 174, 173, 172, 171, 170, 169 ]
}

[sub_resource type="Animation" id=109]
resource_name = "Idle_right"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=110]
resource_name = "Idle_up"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 146, 150, 146, 150, 146 ]
}

[sub_resource type="Animation" id=180]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HitboxPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 165.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=205]
resource_name = "RollDown"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 13, 157, 158, 159, 160, 13, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}

[sub_resource type="Animation" id=206]
resource_name = "RollLeft"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 169, 192, 336, 335, 334, 333, 192, 169 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}

[sub_resource type="Animation" id=207]
resource_name = "RollRight"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 13, 157, 158, 159, 160, 13, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}

[sub_resource type="Animation" id=208]
resource_name = "RollUp"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 13, 157, 158, 159, 160, 13, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}

[sub_resource type="Animation" id=111]
resource_name = "Walk_down"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 28, 29, 30, 31, 32, 33, 34 ]
}

[sub_resource type="Animation" id=112]
resource_name = "Walk_left"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 194, 193, 192, 191, 190, 189, 188, 187 ]
}

[sub_resource type="Animation" id=113]
resource_name = "Walk_right"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 18, 19, 20 ]
}

[sub_resource type="Animation" id=114]
resource_name = "Walk_up"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 150, 149, 148, 147, 146, 145, 144, 143, 150 ]
}

[sub_resource type="AnimationNodeAnimation" id=226]
animation = "Attack_left"

[sub_resource type="AnimationNodeAnimation" id=227]
animation = "Attack_right"

[sub_resource type="AnimationNodeAnimation" id=228]
animation = "AttackDown"

[sub_resource type="AnimationNodeAnimation" id=229]
animation = "AttackUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=162]
blend_point_0/node = SubResource( 226 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 227 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 228 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 229 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=230]
animation = "Death"

[sub_resource type="AnimationNodeAnimation" id=231]
animation = "Death"

[sub_resource type="AnimationNodeAnimation" id=232]
animation = "Death"

[sub_resource type="AnimationNodeAnimation" id=233]
animation = "Death"

[sub_resource type="AnimationNodeBlendSpace2D" id=223]
blend_point_0/node = SubResource( 230 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 231 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 232 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 233 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=250]
animation = "EnemiesAttackLeft"

[sub_resource type="AnimationNodeAnimation" id=251]
animation = "EnemiesAttackRight"

[sub_resource type="AnimationNodeAnimation" id=252]
animation = "Attack_left"

[sub_resource type="AnimationNodeAnimation" id=253]
animation = "Attack_right"

[sub_resource type="AnimationNodeAnimation" id=254]
animation = "EnemiesAttackLeft"

[sub_resource type="AnimationNodeAnimation" id=255]
animation = "EnemiesAttackRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=249]
blend_point_0/node = SubResource( 250 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 251 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 252 )
blend_point_2/pos = Vector2( -0.1, 0.9 )
blend_point_3/node = SubResource( 253 )
blend_point_3/pos = Vector2( 0.1, 0.9 )
blend_point_4/node = SubResource( 254 )
blend_point_4/pos = Vector2( -0.1, -0.9 )
blend_point_5/node = SubResource( 255 )
blend_point_5/pos = Vector2( 0.1, -0.9 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=234]
animation = "Idle_left"

[sub_resource type="AnimationNodeAnimation" id=235]
animation = "Idle_right"

[sub_resource type="AnimationNodeAnimation" id=236]
animation = "Idle_down"

[sub_resource type="AnimationNodeAnimation" id=237]
animation = "Idle_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=167]
blend_point_0/node = SubResource( 234 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 235 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 236 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 237 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=238]
animation = "RollLeft"

[sub_resource type="AnimationNodeAnimation" id=239]
animation = "RollRight"

[sub_resource type="AnimationNodeAnimation" id=240]
animation = "RollDown"

[sub_resource type="AnimationNodeAnimation" id=241]
animation = "RollUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=213]
blend_point_0/node = SubResource( 238 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 239 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 240 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 241 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=269]
animation = "Walk_left"

[sub_resource type="AnimationNodeAnimation" id=270]
animation = "Walk_right"

[sub_resource type="AnimationNodeAnimation" id=271]
animation = "Walk_down"

[sub_resource type="AnimationNodeAnimation" id=272]
animation = "Walk_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=262]
blend_point_0/node = SubResource( 269 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 270 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 271 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 272 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=170]

[sub_resource type="AnimationNodeStateMachineTransition" id=171]

[sub_resource type="AnimationNodeStateMachineTransition" id=214]

[sub_resource type="AnimationNodeStateMachineTransition" id=215]

[sub_resource type="AnimationNodeStateMachineTransition" id=256]

[sub_resource type="AnimationNodeStateMachineTransition" id=257]

[sub_resource type="AnimationNodeStateMachineTransition" id=263]

[sub_resource type="AnimationNodeStateMachineTransition" id=264]

[sub_resource type="AnimationNodeStateMachineTransition" id=265]

[sub_resource type="AnimationNodeStateMachineTransition" id=266]

[sub_resource type="AnimationNodeStateMachineTransition" id=267]

[sub_resource type="AnimationNodeStateMachineTransition" id=268]

[sub_resource type="AnimationNodeStateMachine" id=129]
states/Attack/node = SubResource( 162 )
states/Attack/position = Vector2( 280, 235 )
states/Death/node = SubResource( 223 )
states/Death/position = Vector2( 425, 235 )
states/EneminesAttack/node = SubResource( 249 )
states/EneminesAttack/position = Vector2( 117, 149 )
states/Idle/node = SubResource( 167 )
states/Idle/position = Vector2( 280, 149 )
states/Roll/node = SubResource( 213 )
states/Roll/position = Vector2( 280, 64 )
states/Walk/node = SubResource( 262 )
states/Walk/position = Vector2( 425, 149 )
transitions = [ "Idle", "Attack", SubResource( 170 ), "Attack", "Idle", SubResource( 171 ), "Idle", "Roll", SubResource( 214 ), "Roll", "Idle", SubResource( 215 ), "Idle", "EneminesAttack", SubResource( 256 ), "EneminesAttack", "Idle", SubResource( 257 ), "Idle", "Walk", SubResource( 263 ), "Walk", "Idle", SubResource( 264 ), "Walk", "Death", SubResource( 265 ), "Death", "Walk", SubResource( 266 ), "Walk", "Attack", SubResource( 267 ), "Attack", "Walk", SubResource( 268 ) ]
start_node = "Idle"
graph_offset = Vector2( -51.0341, 37.536 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=130]

[sub_resource type="CapsuleShape2D" id=218]
radius = 12.0
height = 12.0

[sub_resource type="CapsuleShape2D" id=179]
radius = 26.0724
height = 25.8459

[sub_resource type="GDScript" id=246]
script/source = "extends Node2D

export(int) var max_bar = 4 setget set_max_bar
var bar = max_bar setget set_bar

signal no_bar
signal bar_changed(value)
signal max_bar_changed(value)

func set_max_bar(value):
	max_bar = value
	self.bar = min(bar, max_bar)
	emit_signal(\"max_bar_changed\")

func set_bar(value):
	bar = value
	emit_signal(\"bar_changed\", bar)
	if bar <= 0:
		emit_signal(\"no_bar\")
		
func _ready():
	self.bar = 0
"

[node name="PlayerDungeon" type="KinematicBody2D"]
collision_layer = 27
collision_mask = 27
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )
hframes = 13
vframes = 26
frame = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5, 19 )
shape = SubResource( 104 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/AttackDown = SubResource( 132 )
anims/AttackUp = SubResource( 133 )
anims/Attack_left = SubResource( 105 )
anims/Attack_right = SubResource( 106 )
anims/Death = SubResource( 217 )
anims/Idle_down = SubResource( 107 )
anims/Idle_left = SubResource( 108 )
anims/Idle_right = SubResource( 109 )
anims/Idle_up = SubResource( 110 )
anims/RESET = SubResource( 180 )
anims/RollDown = SubResource( 205 )
anims/RollLeft = SubResource( 206 )
anims/RollRight = SubResource( 207 )
anims/RollUp = SubResource( 208 )
anims/Walk_down = SubResource( 111 )
anims/Walk_left = SubResource( 112 )
anims/Walk_right = SubResource( 113 )
anims/Walk_up = SubResource( 114 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 129 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 130 )
parameters/Attack/blend_position = Vector2( -0.590381, 0.050505 )
parameters/Death/blend_position = Vector2( 0, 0 )
parameters/EneminesAttack/blend_position = Vector2( 0.251908, -0.0575917 )
parameters/Idle/blend_position = Vector2( 0.0464345, 0.0722611 )
parameters/Roll/blend_position = Vector2( -0.298507, 0.226933 )
parameters/Walk/blend_position = Vector2( -0.998299, -0.00862074 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
position = Vector2( -1, 1 )

[node name="HurtboxShape" parent="Hurtbox" index="0"]
position = Vector2( -4, 17 )
shape = SubResource( 218 )

[node name="HitboxPivot" type="Position2D" parent="."]
position = Vector2( -3, 19 )
rotation = 3.20966
__meta__ = {
"_gizmo_extents_": 8.0
}

[node name="SwordHitbox" parent="HitboxPivot" instance=ExtResource( 3 )]
position = Vector2( 15.1452, -6.29456 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" parent="HitboxPivot/SwordHitbox" index="0"]
position = Vector2( -48.1559, 6.83371 )
shape = SubResource( 179 )
disabled = true

[node name="Stats" parent="." instance=ExtResource( 6 )]

[node name="PlayerStats2" parent="." instance=ExtResource( 7 )]
script = SubResource( 246 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]

[editable path="Hurtbox"]
[editable path="HitboxPivot/SwordHitbox"]
